--- a/frontend/style.css
+++ b/frontend/style.css
@@ -38,7 +38,7 @@
     padding: 5rem 0;
     background-color: var(--bs-dark);
     color: white;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('../img/library-bg.jpg');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://source.unsplash.com/random/1200x600/?library');
     background-size: cover;
     background-position: center;
 }
