--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -43,6 +43,11 @@
                            href="{{ url_for('main.sections') }}">Sections</a>
                     </li>
                     {% endif %}
+                    {% if current_user.is_student() %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('student_dashboard') }}">Student Dashboard</a>
+                    </li>
+                    {% endif %}
                     {% endif %}
                 </ul>
                 <ul class="navbar-nav">
